# SWAT

./: .gitignore  CMakeLists.txt  README.md  build.sh  closePort.sh  exp_scripts.py  query_decorrelation.py
clientProxy/: CMakeLists.txt
clientProxy/src/: BinaryIndexedTree.hpp  Query.hpp  SamplePool.hpp  SegmentTree.hpp  UniformQueryFactory.hpp  client.cpp
cmake/: FindSGX.cmake
common/: enclave.edl  err_msg.cpp  openssl_utility.cpp  tcommon.cpp  ucommon.cpp  utility.cpp  verify_callback.cpp
include/common/: common.h  defs.h  openssl_utility.h  utility.h
include/enclave/: DOMerger.hpp  DPInteriorPoint.hpp  DPPrefixSum.hpp  Dist.hpp  Index.hpp  OHeap.hpp  ObliviousSort.hpp
include/libstorage/: MemcachedStorage.hpp  RedisStorage.hpp  RocksStorage.hpp  StorageInterface.h
serverProxy/: CMakeLists.txt
serverProxy/enclave/: server.config.xml  server.cpp  server.edl
serverProxy/host/: host.cpp
sgx_socket/: trusted_sgx_socket.cpp  untrusted_sgx_socket.cpp
